- Move shared symbols to a different class - Add option to override the name of the shared symbol class